# project2_Zaremba_Stepan_M25-555

./: .gitignore  Makefile  README.md  db_meta.json  final_rec_2_project2_zaremba.cast  final_rec_project2_zaremba.cast  primitive_db_zaremba.cast  pyproject.toml  Ревьюеру.md
data/: users.json
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
