[tool.poetry]
name = "project2-zaremba-stepan-m25-555"
version = "0.1.0"
description = "Primitive database"
authors = ["Stepan Zaremba <212485sz@mail.ru>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"


[tool.poetry.dependencies]
python = ">=3.12"
prompt = "^0.4.1"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.11,<0.15.0)"
]
